# spicyhome-ksa

./: .bazelignore  .gitignore  .npmrc  .prettierignore  AGENTS.md  BUILD.bazel  DB_PLAN.md  MODULE.bazel  PLAN.md  README.md  VERSION  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  test-compliance.sh
apps/android/: BUILD.bazel  README.md  build_apk.sh  run_tests.sh  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/spicyhome/pos/: MainActivity.kt  SpicyHomeApp.kt
apps/android/app/src/main/java/com/spicyhome/pos/data/: PreferencesManager.kt
apps/android/app/src/main/java/com/spicyhome/pos/data/api/: ApiClientProvider.kt
apps/android/app/src/main/java/com/spicyhome/pos/data/realtime/: RealtimeClient.kt  RealtimeEvent.kt
apps/android/app/src/main/java/com/spicyhome/pos/data/repository/: AuthRepository.kt  MenuRepository.kt  OrderRepository.kt  TableRepository.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/login/: LoginScreen.kt  LoginViewModel.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/navigation/: NavGraph.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/order/: OrderScreen.kt  OrderViewModel.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/orders/: OrdersScreen.kt  OrdersViewModel.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/setup/: SetupScreen.kt  SetupViewModel.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/tables/: TablesScreen.kt  TablesViewModel.kt
apps/android/app/src/main/java/com/spicyhome/pos/ui/theme/: Color.kt  Theme.kt
apps/android/app/src/main/java/com/spicyhome/pos/util/: MoneyFormatter.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/test/java/com/spicyhome/pos/data/: FakePreferencesManager.kt
apps/android/app/src/test/java/com/spicyhome/pos/data/api/: FakeApiClientProvider.kt
apps/android/app/src/test/java/com/spicyhome/pos/data/realtime/: RealtimeClientTest.kt
apps/android/app/src/test/java/com/spicyhome/pos/ui/: LoginViewModelTest.kt  OrderViewModelTest.kt
apps/android/app/src/test/java/com/spicyhome/pos/util/: MoneyFormatterTest.kt
apps/pos/: BUILD.bazel  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite-wrapper.mjs  vite.config.ts  vitest-wrapper.mjs
apps/pos/src/: api.ts  app.tsx  index.css  main.tsx  realtime.ts
apps/pos/src/__tests__/: api.test.ts  cart.test.ts  day.test.tsx  login.test.tsx  money.test.ts  protected-route.test.tsx
apps/pos/src/components/: Layout.tsx  ProtectedRoute.tsx
apps/pos/src/hooks/: useCart.ts
apps/pos/src/pages/: AdminPage.tsx  DayPage.tsx  LoginPage.tsx  OrderPage.tsx  OrdersPage.tsx  TablesViewPage.tsx
apps/pos/src/pages/admin/: CategoriesPage.tsx  ItemsPage.tsx  PrintersPage.tsx  TablesPage.tsx  UsersPage.tsx  ZatcaPage.tsx
apps/server/: BUILD.bazel  jest.config.cjs  package.json  tsconfig.json
apps/server/src/: app.e2e.test.ts  app.module.ts  client.contract.test.ts  main.ts  openapi.drift.test.ts  openapi.ts
apps/server/src/common/: audit-fields.helper.ts  jwt-options.ts
apps/server/src/common/decorators/: requires-permission.decorator.ts
apps/server/src/common/guards/: auth.guard.ts  roles.guard.ts
apps/server/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/server/src/modules/auth/dto/: create-role.dto.ts  create-user.dto.ts  login-response.dto.ts  login.dto.ts  me-response.dto.ts  role-response.dto.ts  update-user.dto.ts  user-response.dto.ts
apps/server/src/modules/business-day/: business-day.controller.ts  business-day.service.ts  business-day.test.ts
apps/server/src/modules/business-day/dto/: close-day.dto.ts  open-day.dto.ts
apps/server/src/modules/database/: database.module.ts
apps/server/src/modules/menu/: menu.controller.ts  menu.service.ts
apps/server/src/modules/menu/dto/: category-response.dto.ts  create-category.dto.ts  create-item.dto.ts  item-response.dto.ts
apps/server/src/modules/orders/: audit-log.service.test.ts  audit-log.service.ts  daily-sequence.test.ts  orders.controller.ts  orders.module.ts  orders.service.ts  totals.test.ts
apps/server/src/modules/orders/dto/: audit-log-entry.dto.ts  audit-verify-response.dto.ts  create-order-response.dto.ts  create-order.dto.ts  order-item-response.dto.ts  order-response.dto.ts  print-response.dto.ts  success-response.dto.ts
apps/server/src/modules/printers/: esc-pos-builder.test.ts  esc-pos-builder.ts  kitchen-ticket-builder.test.ts  kitchen-ticket-builder.ts  print-integration.test.ts  print-job.service.ts  printer-transport.test.ts  printer-transport.ts  printers.controller.ts  printers.module.ts  printers.service.ts  receipt-builder.test.ts  receipt-builder.ts
apps/server/src/modules/printers/dto/: create-printer.dto.ts  printer-response.dto.ts  printer-status-response.dto.ts
apps/server/src/modules/realtime/: realtime.gateway.test.ts  realtime.gateway.ts  realtime.module.ts
apps/server/src/modules/reports/: reports.controller.ts  reports.module.ts  reports.service.ts  reports.test.ts  z-report-builder.test.ts  z-report-builder.ts
apps/server/src/modules/settings/: settings.controller.ts  settings.module.ts  settings.service.ts
apps/server/src/modules/settings/dto/: settings.dto.ts
apps/server/src/modules/tables/: tables.controller.ts  tables.service.ts
apps/server/src/modules/tables/dto/: create-table.dto.ts  table-response.dto.ts
apps/server/src/modules/zatca/: tlv.test.ts  tlv.ts  zatca-crypto.service.test.ts  zatca-crypto.service.ts  zatca-http.service.ts  zatca-integration.test.ts  zatca-invoice.service.ts  zatca-onboarding.service.test.ts  zatca-onboarding.service.ts  zatca-reporting.service.ts  zatca-xml-builder.service.test.ts  zatca-xml-builder.service.ts  zatca.controller.ts  zatca.module.ts
apps/server/src/modules/zatca/dto/: zatca-config.dto.ts
packaging/: README.txt  build-package.sh  fixup-packages.js  (+1 more)
(+10 files in other folders)
