load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "lib",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/**/*.test.ts"],
    ),
    tsconfig = "tsconfig.json",
    transpiler = "tsc",
    declaration = True,
    resolve_json_module = True,
    source_map = True,
    deps = [
        "//:node_modules/@types/node",
        ":node_modules/@nestjs/common",
        ":node_modules/@nestjs/core",
        ":node_modules/@nestjs/event-emitter",
        ":node_modules/@nestjs/jwt",
        ":node_modules/@nestjs/platform-express",
        ":node_modules/@nestjs/platform-ws",
        ":node_modules/@nestjs/serve-static",
        ":node_modules/@nestjs/swagger",
        ":node_modules/@nestjs/websockets",
        ":node_modules/@noble/curves",
        ":node_modules/@noble/hashes",
        ":node_modules/@spicyhome/db",
        ":node_modules/@spicyhome/shared",
        ":node_modules/node-forge",
        ":node_modules/@types/bcryptjs",
        ":node_modules/@types/better-sqlite3",
        ":node_modules/@types/express",
        ":node_modules/@types/node-forge",
        ":node_modules/@types/uuid",
        ":node_modules/@types/ws",
        ":node_modules/bcryptjs",
        ":node_modules/better-sqlite3",
        ":node_modules/class-transformer",
        ":node_modules/class-validator",
        ":node_modules/drizzle-orm",
        ":node_modules/express",
        ":node_modules/node-forge",
        ":node_modules/reflect-metadata",
        ":node_modules/rxjs",
        ":node_modules/uuid",
        ":node_modules/ws",
    ],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [
        ":lib",
        "package.json",
    ],
    visibility = ["//visibility:public"],
)

js_binary(
    name = "dev",
    data = [
        ":lib",
        ":node_modules/@noble/curves",
        ":node_modules/@noble/hashes",
        ":node_modules/@spicyhome/db",
        ":node_modules/@spicyhome/shared",
        ":node_modules/node-forge",
    ],
    entry_point = "src/main.js",
    env = {
        "TZ": "Asia/Riyadh",
        "SPICYHOME_DB": "./data/spicyhome.db",
    },
)

js_binary(
    name = "dev_inspect",
    data = [
        ":lib",
        ":node_modules/@noble/curves",
        ":node_modules/@noble/hashes",
        ":node_modules/@spicyhome/db",
        ":node_modules/@spicyhome/shared",
        ":node_modules/node-forge",
    ],
    entry_point = "src/main.js",
    env = {
        "TZ": "Asia/Riyadh",
        "SPICYHOME_DB": "./data/spicyhome.db",
        "NODE_OPTIONS": "--inspect=9229",
    },
)

js_binary(
    name = "openapi",
    data = [
        ":lib",
        ":node_modules/@noble/curves",
        ":node_modules/@noble/hashes",
        ":node_modules/@spicyhome/db",
        ":node_modules/@spicyhome/shared",
        ":node_modules/node-forge",
    ],
    entry_point = "src/openapi.js",
    env = {
        "TZ": "Asia/Riyadh",
        "SPICYHOME_DB": ":memory:",
    },
)

ts_project(
    name = "lib_test",
    srcs = glob(["src/**/*.test.ts"]),
    tsconfig = "tsconfig.json",
    transpiler = "tsc",
    declaration = True,
    resolve_json_module = True,
    source_map = True,
    deps = [
        ":lib",
        ":node_modules/@nestjs/common",
        ":node_modules/@nestjs/event-emitter",
        ":node_modules/@nestjs/jwt",
        ":node_modules/@nestjs/platform-ws",
        ":node_modules/@nestjs/testing",
        ":node_modules/@nestjs/websockets",
        ":node_modules/@noble/curves",
        ":node_modules/@noble/hashes",
        ":node_modules/@spicyhome/client-ts",
        ":node_modules/@spicyhome/db",
        ":node_modules/@spicyhome/shared",
        ":node_modules/@types/jest",
        ":node_modules/@types/node-forge",
        ":node_modules/@types/supertest",
        ":node_modules/@types/ws",
        ":node_modules/jest",
        ":node_modules/node-forge",
        ":node_modules/supertest",
        ":node_modules/ws",
    ],
)

jest_test(
    name = "test",
    config = "jest.config.cjs",
    data = [
        ":lib",
        ":lib_test",
        ":node_modules/@nestjs/event-emitter",
        ":node_modules/@nestjs/jwt",
        ":node_modules/@nestjs/platform-ws",
        ":node_modules/@nestjs/websockets",
        ":node_modules/@noble/curves",
        ":node_modules/@noble/hashes",
        ":node_modules/@spicyhome/client-ts",
        ":node_modules/@spicyhome/db",
        ":node_modules/@spicyhome/shared",
        ":node_modules/@types/ws",
        ":node_modules/node-forge",
        ":node_modules/ws",
        "//packages/api-spec:openapi_json",
        "//packages/db:migrations",
    ],
    node_modules = ":node_modules",
)
